# cirious_codex

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cirious_codex_cli/: Cargo.toml
cirious_codex_config/: Cargo.toml
cirious_codex_logger/: Cargo.toml
cirious_codex_metrics/: Cargo.toml  README.md
cirious_codex_metrics/examples/: build_demo.rs
cirious_codex_metrics/src/: builder.rs  lib.rs
cirious_codex_term/: Cargo.toml  README.md
cirious_codex_term/examples/: demo.rs
cirious_codex_term/src/: color.rs  cursor.rs  lib.rs  screen.rs  style.rs  styled.rs  traits.rs
cirious_codex_term/tests/: integration_test.rs
docs/: architecture.md  cli_integration.md  configuration.md  error_handling.md  index.md  logging.md  telemetry.md
examples/: 01_quickstart.rs  02_custom_logging.rs  03_loading_config.rs  04_custom_cli.rs  04_full_ecosystem.rs  05_full_ecosystem.rs  05_metrics_build.rs
src/: lib.rs
tests/: integration_config.rs  integration_ecosystem.rs
tests/common/: mod.rs
