[workspace]
resolver = "2"
members = [
    "cirious_codex_config",
    "cirious_codex_logger",
    "cirious_codex_result",
    "cirious_codex_term",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cirious Studio <cirious.studio@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cirious-studio/cirious_codex"
homepage = "https://github.com/cirious-studio/cirious_codex"

[package]
name = "cirious_codex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cirious_codex_config = { workspace = true, optional = true }
cirious_codex_logger = { workspace = true, optional = true }
cirious_codex_result = { workspace = true, optional = true }
cirious_codex_term = { workspace = true, optional = true }

[features]
result = ["dep:cirious_codex_result"]
config = ["dep:cirious_codex_config"]
term = ["dep:cirious_codex_term"]
logger = ["dep:cirious_codex_logger", "term"]
full = ["config", "logger", "result", "term"]

[workspace.dependencies]
cirious_codex_config = { path = "cirious_codex_config" }
cirious_codex_logger = { path = "cirious_codex_logger" }
cirious_codex_result = { path = "cirious_codex_result" }
cirious_codex_term = { path = "cirious_codex_term" }

[dev-dependencies]
cirious_codex = { path = ".", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "warn"

[workspace.lints.clippy]
# Example clippy rules for a professional workspace
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
